// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assignment_comments.js 1`] = `
"fnString =
  // Comment
  'some' + 'long' + 'string';

var fnString =
  // Comment
  'some' + 'long' + 'string';

var fnString =
  // Comment

  'some' + 'long' + 'string';

var fnString =

  // Comment

  'some' + 'long' + 'string';

var fnString =
  /* comment */
  'some' + 'long' + 'string';

var fnString =
  /**
   * multi-line
   */
  'some' + 'long' + 'string';

var fnString =
  /* inline */ 'some' + 'long' + 'string' + 'some' + 'long' + 'string' + 'some' + 'long' + 'string' + 'some' + 'long' + 'string';

var fnString = // Comment
  // Comment
  'some' + 'long' + 'string';

var fnString = // Comment
  'some' + 'long' + 'string';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
fnString =
  // Comment
  \\"some\\" + \\"long\\" + \\"string\\";

var fnString =
  // Comment
  \\"some\\" + \\"long\\" + \\"string\\";

var fnString =
  // Comment

  \\"some\\" + \\"long\\" + \\"string\\";

var fnString =
  // Comment

  \\"some\\" + \\"long\\" + \\"string\\";

var fnString =
  /* comment */
  \\"some\\" + \\"long\\" + \\"string\\";

var fnString =
  /**
   * multi-line
   */
  \\"some\\" + \\"long\\" + \\"string\\";

var fnString =
  /* inline */ \\"some\\" +
  \\"long\\" +
  \\"string\\" +
  \\"some\\" +
  \\"long\\" +
  \\"string\\" +
  \\"some\\" +
  \\"long\\" +
  \\"string\\" +
  \\"some\\" +
  \\"long\\" +
  \\"string\\";

var fnString = // Comment
  // Comment
  \\"some\\" + \\"long\\" + \\"string\\";

var fnString = // Comment
  \\"some\\" + \\"long\\" + \\"string\\";
"
`;

exports[`assignment_comments.js 2`] = `
"fnString =
  // Comment
  'some' + 'long' + 'string';

var fnString =
  // Comment
  'some' + 'long' + 'string';

var fnString =
  // Comment

  'some' + 'long' + 'string';

var fnString =

  // Comment

  'some' + 'long' + 'string';

var fnString =
  /* comment */
  'some' + 'long' + 'string';

var fnString =
  /**
   * multi-line
   */
  'some' + 'long' + 'string';

var fnString =
  /* inline */ 'some' + 'long' + 'string' + 'some' + 'long' + 'string' + 'some' + 'long' + 'string' + 'some' + 'long' + 'string';

var fnString = // Comment
  // Comment
  'some' + 'long' + 'string';

var fnString = // Comment
  'some' + 'long' + 'string';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
fnString =
  // Comment
  \\"some\\" + \\"long\\" + \\"string\\";

var fnString =
  // Comment
  \\"some\\" + \\"long\\" + \\"string\\";

var fnString =
  // Comment

  \\"some\\" + \\"long\\" + \\"string\\";

var fnString =
  // Comment

  \\"some\\" + \\"long\\" + \\"string\\";

var fnString =
  /* comment */
  \\"some\\" + \\"long\\" + \\"string\\";

var fnString =
  /**
   * multi-line
   */
  \\"some\\" + \\"long\\" + \\"string\\";

var fnString = /* inline */ \\"some\\" +
  \\"long\\" +
  \\"string\\" +
  \\"some\\" +
  \\"long\\" +
  \\"string\\" +
  \\"some\\" +
  \\"long\\" +
  \\"string\\" +
  \\"some\\" +
  \\"long\\" +
  \\"string\\";

var fnString = // Comment
  // Comment
  \\"some\\" + \\"long\\" + \\"string\\";

var fnString = \\"some\\" + \\"long\\" + \\"string\\"; // Comment
"
`;
